# game-o-life

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  life-game.c
